[package]
name = "karma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for repl
rustyline = "10.0.0"
# serilaztion 
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "2.0.1"
# async i/o
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
# for coverting slice to array
slice_as_array = "1.1.0"